# ai-information-geathering

./: .eslintrc.json  .gitignore  .gitmodules  CLAUDE.md  README.md  config.yaml  main.py  pyproject.toml  web-clipper-template.json
.claude/: settings.json
docs/: PRD.md  workflow-guide.md
docs/features/: AIG-1-youtube-ingest.md  AIG-2-wiki-maintenance.md  AIG-3-daily-briefing.md
features/: INDEX.md
src/: __init__.py  briefing.py  cli.py  config.py  feed.py  metadata.py  process.py  summarize.py  transcript.py  vault.py  wiki.py
tests/: test_briefing.py  test_config.py  test_feed.py  test_metadata.py  test_transcript.py  test_vault.py  test_wiki.py
vault/: index.md  log.md  schema.md
vault/.obsidian/: workspace.json
vault/inbox/: 2026-04-16-Claude Code + Graphify = Instant Knowledge Graph (Free).md  2026-04-16-Claude Opus 4.7 Just Dropped... Or Did It Really.md  2026-04-17-I Turned Claude Opus 4.7 Into a 247 Trader.md  2026-04-19-The Claude Code Setup Nobody Shows You (Replaces OpenClaw + Hermes).md
wiki/logs/: 2026-04-30T14-11_main_6a9dab.md
wiki_ai-information-geathering/logs/: 2026-04-17T21-21_main_580fa7.md  2026-04-17T21-22_main_52158e.md  2026-04-17T21-22_main_bd9fc0.md  2026-04-17T21-23_main_2574a6.md  2026-04-17T21-23_main_4623c5.md  2026-04-17T21-23_main_c36161.md  2026-04-17T21-24_main_0249f0.md  2026-04-17T21-24_main_4b6c08.md  2026-04-17T21-24_main_9e34ad.md  2026-04-17T21-24_main_fb0e0c.md  2026-04-17T21-25_main_7accb9.md  2026-04-17T21-25_main_a37c7e.md  2026-04-17T21-25_main_b1f4f3.md  2026-04-17T21-26_main_cac67c.md  (+23 more)
(+92 files in other folders)
